--- a/Call.html
+++ b/Call.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>DiggerTransAuto</title>
+    <meta charset="utf-8"><
+    <title>DiggerTransAuto</title>
     <meta name="description" content="Сайт грузоперевозчика DiggerTransAuto">
     <meta name="author" content="Женя Крот">
-	<link href="Call.css" rel="stylesheet" type="text/css"/>
+    <link href="Call.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-	<nav>
-		<a href="Main.html">Главная</a>
-		<a href="Empl.html">Сотрудники</a>
-		<a href="Serv.html">Услуги</a>
-		<a href="About.html"><nobr>О нас</nobr></a>
-		<a><b>Связаться</b></a>
-	</nav>
-	<header>
-		<h1>НАЙДИТЕ НАС</h1>
-	</header>
-	<main>
-		<table align="center">
-			<tr>
-				<td>
-					<iframe width="100%" height="150%" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d808.5746043728378!2d25.302590039677174!3d53.06139216760578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sby!4v1588079726325!5m2!1sru!2sby"></iframe>
-				</td>
+    <nav>
+        <a href="Main.html">Главная</a>
+        <a href="Empl.html">Сотрудники</a>
+        <a href="Serv.html">Услуги</a>
+        <a href="About.html"><nobr>О нас</nobr></a>
+        <a><b>Связаться</b></a>
+    </nav>
+    <header>
+        <h1>НАЙДИТЕ НАС</h1>
+    </header>
+    <main>
+        <table align="center">
+            <tr>
+                <td>
+                    <iframe width="100%" height="150%" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d808.5746043728378!2d25.302590039677174!3d53.06139216760578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sby!4v1588079726325!5m2!1sru!2sby"></iframe>
+            	</td>
 				<td style="padding-left: 50px">
 					Телефон: +375 (44) 798-97-02<br>
 					г. Слоним, ул. Васильковая, 12, кабинет 1<br>
